--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 <!-- !PAGE CONTENT! -->
 <div class="main">
   <div class="firstimg">
-    <img src="./imeges/christopher-gower-m_HRfLhgABo-unsplash.jpg" style="width:100%"  alt="What a beautiful day!">
+    <img src="./Assets/christopher-gower-m_HRfLhgABo-unsplash.jpg" style="width:100%"  alt="computer on the desk">
   </div>
 
   <!-- About section -->
   <div id="about">
     <h4>About Me</h4>
-    <img class="profilepic" src="./imeges/IMG_4144.JPG" alt="Artem Khomenko">
+    <img class="profilepic" src="./Assets/IMG_4144.JPG" alt="Artem Khomenko">
     <div class="para">
       <p>My name is Artem Khomenko, im 20 years old and im a jr dev. Im currently enrolled in UW coding bootcamp. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
